feat(6/9): 7-1練習